# votingsystem

./: .gitignore  PAPER_ANALYSIS.md  README.md  pyproject.toml
src/haechi_voting/: __init__.py  api.py  crypto.py  demo.py  device.py  extensions.py  models.py  proofs.py  record.py  serialization.py  service.py  verifier.py
src/haechi_voting/static/: app.js  index.html  styles.css
tests/: test_api_flow.py  test_demo_flow.py
