[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haechi-voting-framework"
version = "0.1.0"
description = "A research-oriented Python voting framework inspired by Haechi (2026-613)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
haechi_voting = ["static/*.html", "static/*.css", "static/*.js"]
